--- a/index.html
+++ b/index.html
@@ -221,7 +221,10 @@
             <main>
               <div class="container" style="background-color: #efefef; height: 150vh">
                 <div class="fragment">Collections</div>
-                <div class="fragment">Expanses <a id="Click" href="auth/login.html">Login</a></div>
+                <div class="fragment">
+                  <a href="auth/login.html">Login</a>
+                  <a href="https://unitedculturalclub.github.io/app/"></a>
+                </div>
               </div>
             </main>
           </div>
