--- a/signup/index.html
+++ b/signup/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>Hello Login</h1>
-    <a href="signup.html">signup.html</a>
+    <a href="/signup/">signup.html</a>
     <script type="text/javascript" charset="utf-8">
       window.ondblclick = () => {
         const userr = {
