--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
               <div class="container" style="background-color: #efefef; height: 150vh">
                 <div class="fragment">Collections</div>
                 <div class="fragment">
-                  <a href="/login/">Login</a>
+                  <a href="app/login/">Login</a>
                   <a href="https://unitedculturalclub.github.io/app/">Nested!</a>
                 </div>
               </div>
