--- a/signup/index.html
+++ b/signup/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="dark light" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <base href="/app/">
     <title>Login</title>
     <style type="text/css" media="all"></style>
   </head>
