--- a/login/index.html
+++ b/login/index.html
@@ -9,8 +9,8 @@
     <style type="text/css" media="all"></style>
   </head>
   <body>
-    <h1>Hello Login</h1>
-    <a href="signup.html">signup.html</a>
+    <h1>Hello Login upload</h1>
+    <a href="signup/">signup.html</a>
     <script type="text/javascript" charset="utf-8">
       window.ondblclick = () => {
         const userr = {
