--- a/signup/index.html
+++ b/signup/index.html
@@ -6,11 +6,11 @@
     <meta name="color-scheme" content="dark light" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <base href="/app/">
-    <title>Login</title>
+    <title>Signup</title>
     <style type="text/css" media="all"></style>
   </head>
   <body>
-    <h1>Hello Login update</h1>
+    <h1>Hello Signup update</h1>
     <a href="signup/">signup.html</a>
     <script type="text/javascript" charset="utf-8">
       window.ondblclick = () => {
