--- a/signup/index.html
+++ b/signup/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <h1>Hello Signup update</h1>
-    <a href="signup/">signup.html</a>
+    <a href="login/">Login now!</a>
     <script type="text/javascript" charset="utf-8">
       window.ondblclick = () => {
         const userr = {
