--- a/login/index.html
+++ b/login/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <h1>Hello Login updated!</h1>
-    <a href="signup/">signup.html</a>
+    <a href="signup/">signup now!l</a>
     <script type="text/javascript" charset="utf-8">
       window.ondblclick = () => {
         const userr = {
