--- a/login/index.html
+++ b/login/index.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="dark light" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <base href="/app/">
     <title>Login</title>
     <style type="text/css" media="all"></style>
   </head>
   <body>
     <h1>Hello Login updated!</h1>
-    <a href="signup/">signup now!l</a>
+    <a href="../signup/">signup now!l</a>
     <script type="text/javascript" charset="utf-8">
       window.ondblclick = () => {
         const userr = {
