--- a/login/index.html
+++ b/login/index.html
@@ -9,7 +9,7 @@
     <style type="text/css" media="all"></style>
   </head>
   <body>
-    <h1>Hello Login updated!</h1>
+    <h1>../signup!</h1>
     <a href="../signup/">signup now!l</a>
     <script type="text/javascript" charset="utf-8">
       window.ondblclick = () => {
