--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
               <div class="container">
                 <div class="fragment">Collections</div>
                 <div class="fragment">
-                  <a href="admin/index.html">ADMIN</a>
+                  <a href="admin/">ADMIN</a>
                 </div>
               </div>
             </main>
