--- a/admin/index.html
+++ b/admin/index.html
@@ -36,7 +36,7 @@
       .activity-main {
         width: 100%;
       }
-      .activity-main > aside {
+      .activity-main > .side-nav {
         width: 60px;
         height: 100%;
         border-right: 1px solid var(--color-devider);
@@ -48,33 +48,33 @@
         transition: 0.3s;
         z-index: 100;
       }
-      .activity-main > aside header {
+      .activity-main > .side-nav header {
         width: 100%;
       }
-      .activity-main > aside header .launcher {
+      .activity-main > .side-nav header .launcher {
         width: 100%;
         padding: 10px;
         box-sizing: border-box;
         overflow: hidden;
       }
-      .activity-main > aside header .launcher .app {
+      .activity-main > .side-nav header .launcher .app {
         width: 100%;
         overflow: hidden;
       }
-      .activity-main > aside header .launcher .app .wrapper {
+      .activity-main > .side-nav header .launcher .app .wrapper {
         width: 130px;
         height: 40px;
         display: flex;
         justify-content: center;
       }
-      .activity-main > aside header .launcher .app .icon {
+      .activity-main > .side-nav header .launcher .app .icon {
         width: 40px;
         height: 40px;
         display: flex;
         justify-content: center;
         align-items: center;
       }
-      .activity-main > aside header .launcher .app .title {
+      .activity-main > .side-nav header .launcher .app .title {
         flex: 1;
         height: 100%;
         padding: 10px;
@@ -82,7 +82,7 @@
         display: flex;
         align-items: center;
       }
-      .activity-main > aside nav {
+      .activity-main > .side-nav nav {
         width: 100%;
         flex: 1;
         padding: 0 10px;
@@ -90,60 +90,60 @@
         position: relative;
         overflow-x: hidden;
       }
-      .activity-main > aside nav::-webkit-scrollbar {
+      .activity-main > .side-nav nav::-webkit-scrollbar {
         display: none;
       }
-      .activity-main > aside nav .box-shadow {
+      .activity-main > .side-nav nav .box-shadow {
         width: 100%;
         position: sticky;
         top: 0;
         left: 0;
         box-shadow: 0px 0px 10px 15px var(--color-background);
       }
-      .activity-main > aside nav .box-shadow.bottom {
+      .activity-main > .side-nav nav .box-shadow.bottom {
         bottom: 0;
       }
-      .activity-main > aside nav .nav-btn {
+      .activity-main > .side-nav nav .nav-btn {
         width: 100%;
         border-radius: 5px;
         margin: 10px 0;
         overflow: hidden;
       }
-      .activity-main > aside nav .nav-btn.active {
+      .activity-main > .side-nav nav .nav-btn.active {
         background-color:;
       }
-      .activity-main > aside nav .nav-btn .wrapper {
+      .activity-main > .side-nav nav .nav-btn .wrapper {
         width: 130px;
         height: 40px;
         display: flex;
         color: var(--color-text-secondary);
         fill: var(--color-text-secondary);
       }
-      .activity-main > aside nav .nav-btn.active .wrapper {
+      .activity-main > .side-nav nav .nav-btn.active .wrapper {
         color: var(--color-text-primary);
         fill: var(--color-text-primary);
       }
-      .activity-main > aside nav .nav-btn .icon-wrapper {
+      .activity-main > .side-nav nav .nav-btn .icon-wrapper {
         width: 40px;
         height: 40px;
         display: flex;
         justify-content: center;
         align-items: center;
       }
-      .activity-main > aside nav .icon-wrapper .icon {
+      .activity-main > .side-nav nav .icon-wrapper .icon {
         width: 20px;
         height: 20px;
       }
-      .activity-main > aside nav .icon-wrapper .icon-solid {
+      .activity-main > .side-nav nav .icon-wrapper .icon-solid {
         display: none;
       }
-      .activity-main > aside nav .nav-btn.active .icon-regular {
+      .activity-main > .side-nav nav .nav-btn.active .icon-regular {
         display: none;
       }
-      .activity-main > aside nav .nav-btn.active .icon-solid {
+      .activity-main > .side-nav nav .nav-btn.active .icon-solid {
         display: block;
       }
-      .activity-main > aside nav .nav-btn .title-wrapper {
+      .activity-main > .side-nav nav .nav-btn .title-wrapper {
         width: max-content;
         height: 100%;
         padding: 10px;
@@ -151,31 +151,31 @@
         display: flex;
         align-items: center;
       }
-      .activity-main > aside nav .title-wrapper span {
+      .activity-main > .side-nav nav .title-wrapper span {
         color: var(--color-text-primary);
         font-size: 14px;
       }
-      .activity-main > aside footer {
+      .activity-main > .side-nav footer {
         width: 100%;
       }
-      .activity-main > aside footer .profile {
+      .activity-main > .side-nav footer .profile {
         width: 100%;
         padding: 14px;
         box-sizing: border-box;
         overflow: hidden;
       }
-      .activity-main > aside footer .profile .nav-btn {
+      .activity-main > .side-nav footer .profile .nav-btn {
         width: 100%;
         overflow: hidden;
       }
-      .activity-main > aside footer .profile .nav-btn .wrapper {
+      .activity-main > .side-nav footer .profile .nav-btn .wrapper {
         width: 130px;
         height: 32px;
         display: flex;
         color: var(--color-text-secondary);
         fill: var(--color-text-secondary);
       }
-      .activity-main > aside footer .profile .nav-btn .icon-wrapper {
+      .activity-main > .side-nav footer .profile .nav-btn .icon-wrapper {
         width: 32px;
         height: 32px;
         position: relative;
@@ -183,7 +183,7 @@
         justify-content: center;
         align-items: center;
       }
-      .activity-main > aside footer .profile .nav-btn.active .icon-wrapper::before {
+      .activity-main > .side-nav footer .profile .nav-btn.active .icon-wrapper::before {
         content: "";
         width: 100%;
         height: 100%;
@@ -194,17 +194,17 @@
         top: 0;
         left: 0;
       }
-      .activity-main > aside footer .profile .nav-btn .icon {
+      .activity-main > .side-nav footer .profile .nav-btn .icon {
         width: 100%;
         height: 100%;
         border-radius: 100px;
         background-color: var(--color-devider);
       }
-      .activity-main > aside footer .profile .nav-btn.active .icon {
+      .activity-main > .side-nav footer .profile .nav-btn.active .icon {
         border: 4px solid var(--color-background);
         box-sizing: border-box;
       }
-      .activity-main > aside footer .profile .nav-btn .info {
+      .activity-main > .side-nav footer .profile .nav-btn .info {
         flex: 1;
         height: 40px;
         padding: 10px;
@@ -213,16 +213,16 @@
         flex-direction: column;
         justify-content: center;
       }
-      .activity-main > aside footer .profile .nav-btn .info span {
+      .activity-main > .side-nav footer .profile .nav-btn .info span {
         color: var(--color-text-primary);
         fill: var(--color-text-primary);
         font-size: 12px;
       }
-      .activity-main > aside footer .profile .nav-btn .info span:nth-child(1) {
+      .activity-main > .side-nav footer .profile .nav-btn .info span:nth-child(1) {
         font-weight: bold;
         margin-bottom: 2px;
       }
-      .activity-main > aside footer .profile .nav-btn .info span:nth-child(2) {
+      .activity-main > .side-nav footer .profile .nav-btn .info span:nth-child(2) {
         font-weight: 400;
       }
       .activity-main > main {
@@ -246,7 +246,7 @@
   </head>
   <body>
     <div class="activity-main">
-      <aside>
+      <div class="side-nav">
         <header>
           <div class="launcher">
             <div class="app">
@@ -298,7 +298,7 @@
             </div>
           </div>
         </footer>
-      </aside>
+      </div>
       <main>
         <div class="container">
           <div class="fragment fragment-dashboard">Dashboard</div>
@@ -322,7 +322,7 @@
         onCreate(index);
       });
 
-      const navBtn = document.querySelectorAll(".activity-main > aside .nav-btn");
+      const navBtn = document.querySelectorAll(".activity-main > .side-nav .nav-btn");
       navBtn.forEach((btn, index) => {
         btn.addEventListener("click", () => {
           if (!btn.classList.contains("active")) {
