--- a/admin/index.html
+++ b/admin/index.html
@@ -246,7 +246,7 @@
   </head>
   <body>
     <div class="activity-main">
-      <div class=".aside">
+      <div class="aside">
         <header>
           <div class="launcher">
             <div class="app">
