--- a/admin/index.html
+++ b/admin/index.html
@@ -23,7 +23,7 @@
           --color-text-secondary: rgba(190, 190, 190, 1);
           --color-background: rgba(42, 45, 54, 1);
           --color-on-background: rgba(255, 255, 255, 1);
-          --color-surface: ;
+          --color-surface: rgba(42, 45, 54, 1);
           --color-devider: rgba(255, 255, 255, 0.1);
         }
       }
