--- a/index.html
+++ b/index.html
@@ -117,14 +117,101 @@
       .app > .footer .nav-btn.active .active-bar {
         visibility: visible;
       }
+      .home {
+        width: 100%;
+        height: 100vh;
+      }
+      .home > .header {
+        width: 100%;
+      }
+      .home > .header .nav {
+        width: 100%;
+        padding: 10px;
+        box-sizing: border-box;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+      }
+      .home > .header .nav .menu {
+        width: 38px;
+        height: 38px;
+        padding: 8px;
+        box-sizing: border-box;
+        border-radius: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+      }
+      .home > .header .nav .menu span {
+        width: 100%;
+        height: 2px;
+        border-radius: 100px;
+        background-color: var(--color-on-background);
+      }
+      .home > .header .nav .menu span:nth-child(2) {
+        width: 10px;
+        margin-top: 5px;
+      }
+      .home > .header .nav-item {
+        width: 32px;
+        height: 32px;
+        padding: 8px;
+        box-sizing: border-box;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+      .home > .header .nav-icon {
+        width: 100%;
+        height: 100%;
+      }
+      .home > .main {
+        width: 100%;
+      }
+      .home > .main > .container {
+        width: 100%;
+      }
+      .home > .main > .container > .fragment {
+        display: none;
+      }
+      .home > .main > .container > .fragment.active {
+        display: block;
+      }
     </style>
   </head>
   <body>
     <div class="app">
       <div class="main">
         <div class="container">
-          <div class="fragment">
-            <span>Home</span>
+          <div class="fragment home">
+            <div class="header">
+              <div class="nav">
+                <div class="menu">
+                  <span></span>
+                  <span></span>
+                </div>
+                <div>
+                  <div class="nav-item">
+                    <div class="nav-icon">
+                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                        <path d="M19 10.5A8.5 8.5 0 1 1 10.5 2a8.5 8.5 0 0 1 8.5 8.5Z" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"></path>
+                        <line fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" x1="16.511" x2="22" y1="16.511" y2="22"></line>
+                      </svg>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="main">
+              <div class="container">
+                <div class="fragment">
+                  <span>coll</span>
+                </div>
+                <div class="fragment">
+                  <span>exp</span>
+                </div>
+              </div>
+            </div>
           </div>
           <div class="fragment">
             <span>Search</span>
